<resources>
    <string name="app_name">MyCoctails</string>
    <string name="my_cocktails_title">My cocktails</string>
    <string name="create_cocktail_hint">Add your first\n cocktail here</string>
    <string name="create_new_cocktail">Create new cocktail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cocktail_image">Cocktail image</string>
    <string name="recipe">Recipe:</string>
    <string name="cocktail_name">Cocktail name</string>
    <string name="description">Description</string>
    <string name="recipe_hint">Recipe</string>
    <string name="add_additional_ingredient">Add additional ingredient</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="ingredient_s_name">Ingredient\'s name</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="add">Add</string>
</resources>