<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:background="@drawable/ingredient_dialog_shape"
    android:orientation="vertical"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/didact_gothic"
        android:gravity="center_horizontal"
        android:text="@string/add_ingredient"
        android:textSize="32sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextFieldIngredient"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/ingredient_s_name">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextIngredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/didact_gothic"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/light_blue"
        android:fontFamily="@font/didact_gothic"
        android:text="@string/add"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonCloseDialog"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/didact_gothic"
        android:text="@string/cancel"
        android:textColor="@color/light_blue"
        android:textSize="24sp"
        app:strokeColor="@color/light_blue" />

</LinearLayout>