<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.NewCocktailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">

        <ImageView
            android:id="@+id/imageViewCocktailPhoto"
            android:layout_width="216dp"
            android:layout_height="204dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            tools:srcCompat="@drawable/ic_launcher_background" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextFieldTitle"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/cocktail_name">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextFieldDescription"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:hint="@string/description">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewIngredients"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="44dp"
            tools:itemCount="3"
            tools:listitem="@layout/ingredient_list_item" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/TextFieldRecipe"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:hint="@string/recipe_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:backgroundTint="@color/light_blue"
            android:fontFamily="@font/didact_gothic"
            android:text="@string/save"
            android:textSize="24sp" />

        <Button
            android:id="@+id/buttonCancel"
            style="?materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="26dp"
            android:fontFamily="@font/didact_gothic"
            android:text="@string/cancel"
            android:textColor="@color/light_blue"
            android:textSize="24sp"
            app:strokeColor="@color/light_blue" />
    </LinearLayout>

</ScrollView>